clean run, add batch run, slight change to start.py

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Scaling Python with Azure ML and Dask\n",
     "\n",
-    "![Describe gif](media/describe6.gif)"
+    "![Describe gif](media/describe.gif)"
    ]
   },
   {
@@ -95,6 +95,7 @@
     "import sys\n",
     "import dask\n",
     "import glob\n",
+    "import time\n",
     "import socket\n",
     "import matplotlib\n",
     "\n",
@@ -136,12 +137,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is for a ADLS gen2 account I have provisioned with data. It should be read-able pubclicly.\n",
+    "\n",
+    "You should not keep storage account keys in plain text format, and you definitely should not upload them to github in a public repo. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "STORAGE_OPTIONS={'account_name': name, 'account_key': key}"
+    "STORAGE_OPTIONS = {\n",
+    "    'account_name': 'data4dask', \n",
+    "    'account_key' : 'V1a2dz8bOH+zXsOXk9YbkJGFxabjlLffXLeQ0+sGh4+vsT79fgPyAU/TNkQOg10Vt7NxqRT8I/9iftiwcfqXHA=='\n",
+    "}"
    ]
   },
   {
@@ -159,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_name = 'dask'\n",
+    "env_name = 'dask-env'\n",
     "\n",
     "if env_name not in ws.environments:\n",
     "    env = Environment.from_existing_conda_environment(env_name, 'azureml_py36')\n",
@@ -177,7 +190,7 @@
    "source": [
     "### Create dataset\n",
     "\n",
-    "Create the dataset to be used. "
+    "Create the dataset to be used. This will only be used locally."
    ]
   },
   {
@@ -221,17 +234,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool_name = 'manyraspberrypis'\n",
+    "pool_name = 'raspberrypis'\n",
     "\n",
     "if pool_name not in ws.compute_targets:\n",
     "    # create config for Azure ML cluster\n",
     "    # change properties as needed\n",
     "    config = AmlCompute.provisioning_configuration(\n",
-    "             vm_size                 = 'STANDARD_DS13_V2',\n",
+    "             vm_size                 = 'STANDARD_DS13_V2',  # 8 vCPUS 56 GB RAM 112 GB disk \n",
     "             max_nodes               = 100,\n",
-    "             vnet_resourcegroup_name = ws.resource_group,\n",
-    "             vnet_name               = 'dask-vnet',\n",
-    "             subnet_name             = 'default'\n",
+    "             vnet_resourcegroup_name = ws.resource_group,   # replace if needed\n",
+    "             vnet_name               = 'dialup-network',    # replace if needed\n",
+    "             subnet_name             = 'default'            # replace if needed\n",
     "    )\n",
     "    \n",
     "    ct = ComputeTarget.create(ws, pool_name, config)\n",
@@ -246,7 +259,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Startup cluster"
+    "## Startup cluster\n",
+    "\n",
+    "Start the run now. The first time, this will take "
    ]
   },
   {
@@ -255,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name   = 'dask2020'\n",
+    "exp_name   = 'dask-interactive'\n",
     "\n",
     "script_params = {\n",
     "    '--datastore': ws.get_default_datastore(),\n",
@@ -264,10 +279,10 @@
     "\n",
     "est = Estimator('setup', \n",
     "                compute_target          = ct, \n",
-    "                entry_script            = 'start.py', \n",
-    "                environment_definition  = env, \n",
-    "                script_params           = script_params,\n",
-    "                node_count              = 20,\n",
+    "                entry_script            = 'start.py',          # sets up Dask cluster\n",
+    "                environment_definition  = env,                 # use same env as local\n",
+    "                script_params           = script_params,       \n",
+    "                node_count              = 20,                  # 20 nodes -> 160 vCPUs, 1 TB RAM\n",
     "                distributed_training    = MpiConfiguration()\n",
     "               )\n",
     "\n",
@@ -396,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dashboard_port = 4567\n",
+    "dashboard_port = 3210\n",
     "\n",
     "c = Client(dashboard_address=f':{dashboard_port}')\n",
     "print(f'\\n\\n{c}')\n",
@@ -423,8 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dd.read_parquet(f'{local_path}/year=201[7-8]/month=*/*.parquet', engine='pyarrow')\n",
-    "#df = df.repartition(npartitions=df.npartitions*10).persist()\n",
+    "df = dd.read_parquet(f'{local_path}/year=201[7-8]/month=*/*.parquet', engine='pyarrow') # takes 2 years of data - adjust if needed\n",
     "%time df.head()"
    ]
   },
@@ -477,7 +491,7 @@
     "    #plt.style.use('dark_background')\n",
     "    means[col].plot(color='b')\n",
     "    plt.title('Average of {}'.format(col))\n",
-    "    plt.xlim([datetime(2017, 1, 1), datetime(2018, 12, 31)])\n",
+    "    #plt.xlim([datetime(2017, 1, 1), datetime(2018, 12, 31)])  # adjust if needed\n",
     "    plt.grid()"
    ]
   },
@@ -561,7 +575,7 @@
    "outputs": [],
    "source": [
     "files = glob.glob(f'{local_path}/year=*/month=*/*.parquet', recursive=True)\n",
-    "files = [file.replace('/mnt/', 'abfs://') for file in files if '2019' not in file]\n",
+    "files = [file.replace('/mnt/data', 'abfs://datasets') for file in files if '2019' not in file]\n",
     "files[-5:]"
    ]
   },
@@ -620,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time means = df.groupby(df.datetime.dt.floor('d')).mean().compute()\n",
+    "%time means = df.groupby(df.index).mean().compute()\n",
     "means.head()"
    ]
   },
@@ -683,7 +697,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time df = dask.delayed(df.to_parquet)(f'abfs://data/noaa/isd_out.parquet', compression='lz4', storage_options=STORAGE_OPTIONS).compute()"
+    "%time df = dask.delayed(df.to_parquet)(f'abfs://outputs/noaa/isd_out.parquet', compression='lz4', storage_options=STORAGE_OPTIONS).compute()"
    ]
   },
   {
@@ -701,7 +715,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "c.close()\n",
     "run.cancel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Submit a batch job (WIP)\n",
+    "\n",
+    "Now that we know what data processing we want to do, let's do it in a batch instead of interactively. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile setup/run.py\n",
+    "\n",
+    "import time\n",
+    "import dask\n",
+    "import dask.dataframe as dd\n",
+    "\n",
+    "from azureml.core import Run\n",
+    "from dask.distributed import Client\n",
+    "\n",
+    "c = Client(f'tcp://{run.get_metrics()[\"scheduler\"]}')\n",
+    "\n",
+    "Run.get_context().log('client', c)\n",
+    "c.restart()\n",
+    "\n",
+    "t1 = time.time()\n",
+    "\n",
+    "t2 = time.time()\n",
+    "\n",
+    "Run.get_context().log('dask_time (s)', round(t2-t1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_name   = 'dask2020-batch'\n",
+    "\n",
+    "script_params = {\n",
+    "    '--datastore': ws.get_default_datastore(),\n",
+    "    '--script'   : 'run.py' # run code in run.py on cluster and teardown (batch processing)\n",
+    "}\n",
+    "\n",
+    "est = Estimator('setup', \n",
+    "                compute_target          = ct, \n",
+    "                entry_script            = 'start.py',          # sets up Dask cluster\n",
+    "                environment_definition  = env,                 # use same env as local\n",
+    "                script_params           = script_params,       \n",
+    "                node_count              = 20,                  # 20 nodes -> 160 vCPUs, 1 TB RAM\n",
+    "                distributed_training    = MpiConfiguration()\n",
+    "               )\n",
+    "\n",
+    "#run = next(ws.experiments[exp_name].get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
+    "run = Experiment(ws, exp_name).submit(est)\n",
+    "run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RunDetails(run).show()"
    ]
   }
  ],
