fix typo, add emphasis

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -140,9 +140,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is for a ADLS gen2 account I have provisioned with data. It should be read-able pubclicly.\n",
+    "This is for a ADLS gen2 account I have provisioned with data. It should be read-able publicly.\n",
     "\n",
-    "You should not keep storage account keys in plain text format, and you definitely should not upload them to github in a public repo. "
+    "You **should not** keep storage account keys in plain text format, and you definitely should not upload them to github in a public repo. "
    ]
   },
   {
