--- a/clean.ipynb
+++ b/clean.ipynb
@@ -761,7 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name   = 'dask2020-batch'\n",
+    "exp_name   = 'dask-batch'\n",
     "\n",
     "script_params = {\n",
     "    '--datastore': ws.get_default_datastore(),\n",
