--- a/example.ipynb
+++ b/example.ipynb
@@ -3620,7 +3620,7 @@
     }
    ],
    "source": [
-    "exp_name   = 'dask2020-batch'\n",
+    "exp_name   = 'dask-batch'\n",
     "\n",
     "script_params = {\n",
     "    '--datastore': ws.get_default_datastore(),\n",
