--- a/example.ipynb
+++ b/example.ipynb
@@ -3601,7 +3601,7 @@
     "\n",
     "computes = [] # add any delayed funcitons to compute to this\n",
     "\n",
-    "df = dd.read_parquet(f'abfs://datasets/noaa/isd/isd_out.parquet')\n",
+    "df = dd.read_parquet(f'abfs://datasets/noaa/isd/isd_out.parquet', storage_options=STORAGE_OPTIONS)\n",
     "computes = [df.describe(), df.groupby(df.index).mean(), df.memory_usage(index=True, deep=True).sum()]\n",
     "\n",
     "# compute all in parallel\n",
