--- a/example.ipynb
+++ b/example.ipynb
@@ -2244,7 +2244,7 @@
     "\n",
     "print(\"waiting for scheduler node's ip\")\n",
     "while run.get_status() != 'Canceled' and 'scheduler' not in run.get_metrics():\n",
-    "    print('.', end =\"\")\n",
+    "    print('.', end =\'\')\n",
     "    time.sleep(5)\n",
     "\n",
     "if run.get_status() == 'Canceled':\n",
