--- a/example.ipynb
+++ b/example.ipynb
@@ -30,6 +30,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uninstall some bugs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
