--- a/example.ipynb
+++ b/example.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uninstall some bugs"
+    "Uninstall some bugs."
    ]
   },
   {
@@ -51,7 +51,7 @@
    "source": [
     "## Important! \n",
     "\n",
-    "Restart your kernel"
+    "Restart your kernel."
    ]
   },
   {
