--- a/example.ipynb
+++ b/example.ipynb
@@ -1220,9 +1220,7 @@
    "source": [
     "### Take some data\n",
     "\n",
-    "Take some data. The below cells may fail on smaller VMs. 1 year works semi-reliably on a `STANDARD_DS15_V2`, although computing the means fails sometimes.\n",
-    "\n",
-    "You can use the dashboard to understand what is going on with this VM being used as a \"local\" cluster. "
+    "Take some data. The below cells may fail on smaller VMs. You can use the dashboard to understand what is going on with this VM being used as a \"local\" cluster. "
    ]
   },
   {
