--- a/benchmarking/base.ipynb
+++ b/benchmarking/base.ipynb
@@ -272,8 +272,8 @@
     "                distributed_training    = MpiConfiguration()\n",
     "               )\n",
     "\n",
-    "run = next(ws.experiments[exp_name].get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
-    "#run = Experiment(ws, exp_name).submit(est)\n",
+    "#run = next(ws.experiments[exp_name].get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
+    "run = Experiment(ws, exp_name).submit(est)\n",
     "run"
    ]
   },
