--- a/benchmarking/f72s.ipynb
+++ b/benchmarking/f72s.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scaling Python with Azure ML and Dask\n",
+    "# Scaling Python with Azure ML and Dask\n"
    ]
   },
   {
