--- a/benchmarking/base.ipynb
+++ b/benchmarking/base.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scaling Python with Azure ML and Dask\n",
-    "\n",
-    "![Describe gif](media/describe.gif)"
+    "# Scaling Python with Azure ML and Dask\n"
    ]
   },
   {
