--- a/example.ipynb
+++ b/example.ipynb
@@ -3307,6 +3307,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Write gif](media/write.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## End the run\n",
     "\n",
     "Cluster will return to 0 nodes"
