--- a/example.ipynb
+++ b/example.ipynb
@@ -3270,8 +3270,7 @@
    "outputs": [],
    "source": [
     "## insert any Pandas-like Dask data prep code \n",
-    "df['temperature'] = df['temperature']*(9/5)+32 # 'Merica\n",
-    "df = df.repartition(npartitions=df.npartitions*10)"
+    "df['temperature'] = df['temperature']*(9/5)+32 # 'Merica",
    ]
   },
   {
@@ -3282,7 +3281,7 @@
     "\n",
     "**Important:** you will have not access to write to this account, get your own storage account! \n",
     "\n",
-    "See the [API documentation for dask.dataframe.to_parquet](https://docs.dask.org/en/latest/dataframe-api.html#dask.dataframe.to_parquet) for additional settings like specifying columns for directory-based partitioning. "
+    "See the [API documentation for dask.dataframe.to_parquet](https://docs.dask.org/en/latest/dataframe-api.html#dask.dataframe.to_parquet) for additional settings. "
    ]
   },
   {
@@ -3300,6 +3299,7 @@
     }
    ],
    "source": [
+    "df = df.repartition(npartitions=df.npartitions*10)\n",
     "%time dask.delayed(df.to_parquet)(f'abfs://outputs/noaa/isd_out.parquet', compression='lz4', storage_options=STORAGE_OPTIONS).compute()"
    ]
   },
