--- a/example.ipynb
+++ b/example.ipynb
@@ -3270,7 +3270,7 @@
    "outputs": [],
    "source": [
     "## insert any Pandas-like Dask data prep code \n",
-    "df['temperature'] = df['temperature']*(9/5)+32 # 'Merica",
+    "df['temperature'] = df['temperature']*(9/5)+32 # 'Merica"
    ]
   },
   {
