--- a/demo.ipynb
+++ b/demo.ipynb
@@ -343,11 +343,8 @@
     "                distributed_training    = MpiConfiguration()\n",
     "               )\n",
     "\n",
-    "from azureml.core import Run\n",
-    "run = Run(Experiment(ws, exp_name), 'dask-demo_1578938678_d4ffb973')\n",
-    "\n",
     "#run = next(ws.experiments[exp_name].get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
-    "#run = Experiment(ws, exp_name).submit(est)\n",
+    "run = Experiment(ws, exp_name).submit(est)\n",
     "run"
    ]
   },
@@ -3831,8 +3828,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#c.close()\n",
-    "#run.cancel()"
+    "c.close()\n",
+    "run.cancel()"
    ]
   },
   {
