--- a/demo.ipynb
+++ b/demo.ipynb
@@ -240,10 +240,10 @@
    ],
    "source": [
     "### name\n",
-    "name        = 'cody' ### REPLACE\n",
+    "name        = 'cody'             ### REPLACE\n",
     "### vnet settings\n",
     "vnet_rg     = ws.resource_group  # replace if needed\n",
-    "vnet_name   = 'uksouth-vnet'     # REPLACE\n",
+    "vnet_name   = 'uksouth-vnet'     # replace if needed\n",
     "subnet_name = 'default'          # replace if needed\n",
     "### azure ml names \n",
     "env_name    = f'{name}-dask-env'\n",
