--- a/demo.ipynb
+++ b/demo.ipynb
@@ -391,7 +391,7 @@
     "                compute_target          = ct, \n",
     "                entry_script            = 'start.py',          # sets up Dask cluster\n",
     "                environment_definition  = env,                 # use same env as local\n",
-    "                node_count              = 50,                  # 20 nodes -> 160 vCPUs, 1 TB RAM\n",
+    "                node_count              = 50, \n",
     "                distributed_training    = MpiConfiguration()\n",
     "               )\n",
     "run = next(exp.get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
