--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1612,7 +1612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dask.delayed(dd.read_parquet)(files, engine='pyarrow', storage_options=STORAGE_OPTIONS).compute() # get the df again"
+    "df = dask.delayed(dd.read_parquet)(files, engine='pyarrow', storage_options=STORAGE_OPTIONS).compute()"
    ]
   },
   {
