--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1897,13 +1897,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ran in 13.51 minutes\n"
+      "Total run time: 13.51 minutes\n"
      ]
     }
    ],
    "source": [
     "t_end = time.time()\n",
-    "print(f'Ran in {round((t_end-t_start)/60, 2)} minutes')"
+    "print(f'Total run time: {round((t_end-t_start)/60, 2)} minutes')"
    ]
   }
  ],
