--- a/demo.ipynb
+++ b/demo.ipynb
@@ -16,8 +16,6 @@
     "## Environment setup\n",
     "\n",
     "This notebook assumes you are using an Azure ML Compute Instance with the default kernel `azureml_py36`. This contains many unneccesary packages. If you want to avoid a long image build time, you may want to create a new conda environment with the minimal packages needed for your scenario. \n",
-    "\n",
-    "It is important that the local environment matches the remote environment to avoid mismatch issues when submitting commands to the remote cluster. To help with this, we will use Azure ML Environments. "
    ]
   },
   {
@@ -106,9 +104,7 @@
    ],
    "source": [
     "import os\n",
-    "import sys\n",
     "import dask\n",
-    "import glob\n",
     "import time\n",
     "import joblib\n",
     "import fsspec\n",
@@ -128,7 +124,6 @@
     "from azureml.train.estimator import Estimator\n",
     "from azureml.core.runconfig import MpiConfiguration\n",
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
-    "from azureml.core.conda_dependencies import CondaDependencies \n",
     "from azureml.core import Workspace, Experiment, Dataset, Environment, Model\n",
     "\n",
     "%matplotlib inline"
@@ -183,7 +178,7 @@
     "\n",
     "You **should not** keep storage account keys in plain text format, and you definitely should not upload them to github in a public repo. \n",
     "\n",
-    "Use the keyvault with the workspace through the Python SDK or Azure Portal to set the account name and key for your storage account, and use the keyvault to retrieve the secrets and pass them through. "
+    "Use a keyvault through the Python SDK or Azure Portal to set the key for your storage account and use the keyvault to retrieve the secret in remote runs."
    ]
   },
   {
@@ -212,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Enter your name"
+    "### Enter your name"
    ]
   },
   {
@@ -241,10 +236,12 @@
    "source": [
     "### name\n",
     "name        = 'cody'             ### REPLACE\n",
+    "\n",
     "### vnet settings\n",
     "vnet_rg     = ws.resource_group  # replace if needed\n",
     "vnet_name   = 'uksouth-vnet'     # replace if needed\n",
     "subnet_name = 'default'          # replace if needed\n",
+    "\n",
     "### azure ml names \n",
     "env_name    = f'{name}-dask-env'\n",
     "ct_name     = f'{name}-dask-ct'\n",
@@ -332,11 +329,11 @@
     "    # create config for Azure ML cluster\n",
     "    # change properties as needed\n",
     "    config = AmlCompute.provisioning_configuration(\n",
-    "             vm_size                       = 'STANDARD_D14_V2',    # 8 vCPUS 56 GB RAM 112 GB disk \n",
+    "             vm_size                       = 'STANDARD_D14_V2',    # 8 vCPUS 56 GB RAM 112 GB disk\n",
     "             max_nodes                     = 100,\n",
-    "             vnet_resourcegroup_name       = vnet_rg,              # replace if needed\n",
-    "             vnet_name                     = vnet_name,            # replace if needed\n",
-    "             subnet_name                   = subnet_name,          # replace if needed\n",
+    "             vnet_resourcegroup_name       = vnet_rg,\n",
+    "             vnet_name                     = vnet_name,\n",
+    "             subnet_name                   = subnet_name,\n",
     "             idle_seconds_before_scaledown = 300\n",
     "    )\n",
     "    ct = ComputeTarget.create(ws, ct_name, config)\n",
@@ -386,16 +383,19 @@
     }
    ],
    "source": [
+    "# set number of nodes in cluster\n",
+    "nodes = 50\n",
+    "\n",
     "exp = Experiment(ws, exp_name)\n",
     "est = Estimator('setup', \n",
-    "                compute_target          = ct, \n",
+    "                compute_target          = ct,\n",
     "                entry_script            = 'start.py',          # sets up Dask cluster\n",
     "                environment_definition  = env,                 # use same env as local\n",
-    "                node_count              = 50, \n",
+    "                node_count              = 50,\n",
     "                distributed_training    = MpiConfiguration()\n",
     "               )\n",
-    "run = next(exp.get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
-    "#run = exp.submit(est)\n",
+    "#run = next(exp.get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
+    "run = exp.submit(est)\n",
     "run"
    ]
   },
@@ -457,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scale up with Dask and Azure ML"
+    "## Check run status"
    ]
   },
   {
