--- a/demo.ipynb
+++ b/demo.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this is for a strange bug with compute instances \n",
+    "# this is for a strange bug with compute instances\n",
     "import os\n",
     "\n",
     "os.system('sudo cp /etc/nginx/nginx.conf setup/temp.conf') # stupid\n",
@@ -198,7 +198,7 @@
    "outputs": [],
    "source": [
     "STORAGE_OPTIONS = {\n",
-    "    'account_name': 'data4dask', \n",
+    "    'account_name': 'data4dask',\n",
     "    'account_key' : keyvault.get_secret('daskdatakey')\n",
     "}"
    ]
@@ -329,7 +329,7 @@
     "    # create config for Azure ML cluster\n",
     "    # change properties as needed\n",
     "    config = AmlCompute.provisioning_configuration(\n",
-    "             vm_size                       = 'STANDARD_D14_V2',    # 8 vCPUS 56 GB RAM 112 GB disk\n",
+    "             vm_size                       = 'STANDARD_D14_V2', # 8 vCPUS 56 GB RAM 112 GB disk\n",
     "             max_nodes                     = 100,\n",
     "             vnet_resourcegroup_name       = vnet_rg,\n",
     "             vnet_name                     = vnet_name,\n",
@@ -337,7 +337,7 @@
     "             idle_seconds_before_scaledown = 300\n",
     "    )\n",
     "    ct = ComputeTarget.create(ws, ct_name, config)\n",
-    "    ct.wait_for_completion(show_output=True)    \n",
+    "    ct.wait_for_completion(show_output=True)\n",
     "else:\n",
     "    ct = ws.compute_targets[ct_name]\n",
     "    \n",
@@ -350,7 +350,7 @@
    "source": [
     "## Startup cluster\n",
     "\n",
-    "Start the run now. The first time, this will take "
+    "Start the run now. The first time, this will take a while."
    ]
   },
   {
@@ -383,7 +383,7 @@
     }
    ],
    "source": [
-    "# set number of nodes in cluster\n",
+    "#set number of nodes in cluster\n",
     "nodes = 50\n",
     "\n",
     "exp = Experiment(ws, exp_name)\n",
