--- a/demo.ipynb
+++ b/demo.ipynb
@@ -382,8 +382,8 @@
     "                  node_count              = 60,        \n",
     "                  distributed_training    = MpiConfiguration()\n",
     "                 )\n",
-    "run = next(exp.get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
-    "#run = exp.submit(est)\n",
+    "#run = next(exp.get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
+    "run = exp.submit(est)\n",
     "run"
    ]
   },
