--- a/demo.ipynb
+++ b/demo.ipynb
@@ -182,7 +182,7 @@
    "outputs": [],
    "source": [
     "keyvault = ws.get_default_keyvault()\n",
-    "keyvault.set_secret('daskdatakey', 'qhWtyoChzuJ3PT6YoxXjrQYisoLkDNUBBQiQXNyZvjEuKCKYKHSLjs+x/5Xu0B8D/Ky5VDiFRy5kcKvctjZSRw==')"
+    "keyvault.set_secret('daskdatakey', 'mupxHTCWrYQC252cFAWCAm7lSlMPTCt5J3j7FCXIlXW/k3OIdLrWssVnMGKVX6N96XoIlw9O8PkQya3cNB9xKw==')"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "outputs": [],
    "source": [
     "STORAGE_OPTIONS = {\n",
-    "    'account_name': 'data4uksouth', \n",
+    "    'account_name': 'data4dask', \n",
     "    'account_key' : keyvault.get_secret('daskdatakey')\n",
     "}"
    ]
