--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1576,7 +1576,7 @@
     }
    ],
    "source": [
-    "#df = df.repartition(npartitions=df.npartitions*10)\n",
+    "df = df.repartition(npartitions=df.npartitions*10)\n",
     "%time dask.delayed(df.to_parquet)(f'abfs://outputs/noaa/isd_out.parquet', compression='lz4', storage_options=STORAGE_OPTIONS).compute()"
    ]
   },
