--- a/demo.ipynb
+++ b/demo.ipynb
@@ -379,7 +379,7 @@
     "                  compute_target          = ct, \n",
     "                  entry_script            = 'start.py',          # sets up Dask cluster\n",
     "                  environment_definition  = env,                 # use same env as local\n",
-    "                  node_count              = 60,        \n",
+    "                  node_count              = nodes,        \n",
     "                  distributed_training    = MpiConfiguration()\n",
     "                 )\n",
     "#run = next(exp.get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
