--- a/aDaskDemo.ipynb
+++ b/aDaskDemo.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,29 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Delayed('update_packages-fb5dece8-cc41-4cd5-800e-315ca22aba8f'),\n",
-       " Delayed('update_packages-2355903a-507f-46e6-8cc5-23565a65ca67'),\n",
-       " Delayed('update_packages-17898134-7012-457f-9e0c-aa345614a8b9'),\n",
-       " Delayed('update_packages-230c915d-bf00-4354-aef4-dd83e0ac4fc0'),\n",
-       " Delayed('update_packages-398fa0ea-453c-4d8e-bb6e-9f93d629f320'),\n",
-       " Delayed('update_packages-3787be49-2788-4385-8b80-6dc223a08c81'),\n",
-       " Delayed('update_packages-5d4a6dfb-5f03-4b22-8e21-fcccf10398aa'),\n",
-       " Delayed('update_packages-1804fd81-7d14-427a-9e6a-bd64eb0a63d3'),\n",
-       " Delayed('update_packages-b9306549-7389-4114-b8a3-b192858cafa3'),\n",
-       " Delayed('update_packages-6f3e40d4-7550-4013-bebf-2d1cb12414c1')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "computes = [dask.delayed(update_packages)() for i in range(10)]\n",
     "computes"
@@ -70,51 +50,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Future: pending, key: update_packages-fb5dece8-cc41-4cd5-800e-315ca22aba8f>,\n",
-       " <Future: pending, key: update_packages-2355903a-507f-46e6-8cc5-23565a65ca67>,\n",
-       " <Future: pending, key: update_packages-17898134-7012-457f-9e0c-aa345614a8b9>,\n",
-       " <Future: pending, key: update_packages-230c915d-bf00-4354-aef4-dd83e0ac4fc0>,\n",
-       " <Future: pending, key: update_packages-398fa0ea-453c-4d8e-bb6e-9f93d629f320>,\n",
-       " <Future: pending, key: update_packages-3787be49-2788-4385-8b80-6dc223a08c81>,\n",
-       " <Future: pending, key: update_packages-5d4a6dfb-5f03-4b22-8e21-fcccf10398aa>,\n",
-       " <Future: pending, key: update_packages-1804fd81-7d14-427a-9e6a-bd64eb0a63d3>,\n",
-       " <Future: pending, key: update_packages-b9306549-7389-4114-b8a3-b192858cafa3>,\n",
-       " <Future: pending, key: update_packages-6f3e40d4-7550-4013-bebf-2d1cb12414c1>]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c.compute(computes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>cody-dask-demo</td><td>cody-dask-demo_1579722726_f36b5492</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/cody-dask-demo/runs/cody-dask-demo_1579722726_f36b5492?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/copeters-rg/workspaces/uks-azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.run._SubmittedRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>rob-dask-demo</td><td>rob-dask-demo_1579670991_bc706a0e</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/rob-dask-demo/runs/rob-dask-demo_1579670991_bc706a0e?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/copeters-rg/workspaces/uks-azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.run._SubmittedRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
       ],
       "text/plain": [
-       "Run(Experiment: cody-dask-demo,\n",
-       "Id: cody-dask-demo_1579722726_f36b5492,\n",
+       "Run(Experiment: rob-dask-demo,\n",
+       "Id: rob-dask-demo_1579670991_bc706a0e,\n",
        "Type: azureml.scriptrun,\n",
        "Status: Running)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,26 +104,26 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Client</h3>\n",
        "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://10.3.0.59:8786</li>\n",
-       "  <li><b>Dashboard: </b><a href='http://10.3.0.59:8787/status' target='_blank'>http://10.3.0.59:8787/status</a>\n",
+       "  <li><b>Scheduler: </b>tcp://10.3.0.7:8786</li>\n",
+       "  <li><b>Dashboard: </b><a href='http://10.3.0.7:8787/status' target='_blank'>http://10.3.0.7:8787/status</a>\n",
        "</ul>\n",
        "</td>\n",
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Cluster</h3>\n",
        "<ul style=\"text-align: left; list-style:none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Workers: </b>80</li>\n",
-       "  <li><b>Cores: </b>1280</li>\n",
-       "  <li><b>Memory: </b>9.46 TB</li>\n",
+       "  <li><b>Workers: </b>10</li>\n",
+       "  <li><b>Cores: </b>160</li>\n",
+       "  <li><b>Memory: </b>1.18 TB</li>\n",
        "</ul>\n",
        "</td>\n",
        "</tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.3.0.59:8786' processes=80 threads=1280, memory=9.46 TB>"
+       "<Client: 'tcp://10.3.0.7:8786' processes=10 threads=160, memory=1.18 TB>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,6 +132,145 @@
     "c = Client(f'{run.get_metrics()[\"scheduler\"]}')\n",
     "c"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dstore = run.experiment.workspace.datastores['data4dask']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STORAGE_OPTIONS = {\n",
+    "    'account_name': dstore.account_name, \n",
+    "    'account_key' : dstore.account_key\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "protocol  = 'abfs'      # use 'adl' for Azure Data Lake Gen 1\n",
+    "container = 'datasets'  # only contains ISD, GFS is wip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs = fsspec.filesystem(protocol, **STORAGE_OPTIONS, container_name=container)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['noaa/gfs/GFSProcessed/', 'noaa/gfs/8c6ca145-43b7-4492-8222-30f0a138fe69']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fs.ls('/noaa/gfs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['noaa/gfs/GFSProcessed/year=2019/month=9/day=5/',\n",
+       " 'noaa/gfs/GFSProcessed/year=2019/month=9/day=6/',\n",
+       " 'noaa/gfs/GFSProcessed/year=2019/month=9/day=7/',\n",
+       " 'noaa/gfs/GFSProcessed/year=2019/month=9/day=8/',\n",
+       " 'noaa/gfs/GFSProcessed/year=2019/month=9/day=9/']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files = []\n",
+    "for file in fs.glob('noaa/gfs/GFSProcessed/year=*/month=*'): \n",
+    "    files += fs.ls(f'{file}/')\n",
+    "files[-5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is slow - there are ~50k files\n",
+    "files2 = []\n",
+    "for file in files: \n",
+    "    files2 += fs.glob(f'{file}/*.parquet')\n",
+    "files2[-5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = files2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(files) # number of parquet files - there are other random files in there "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -531,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
